Add support for tunnel dissolution in input slot source resolution.